--- a/index.html
+++ b/index.html
@@ -4,24 +4,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thrift Sneaker Shop</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="./index.js"></script>
+    <link rel="stylesheet" href="./styles.css">
+   
 </head>
 <body>
-   <h1>MLOCHA SNEAKERS</h1>
-   <form id="add-form">
+    <header>
+        <div class="menu-button" onclick="showsidebar()">
+          <svg xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px" fill="#e8eaed">
+            <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/>
+          </svg>
+        </div>
+        <div class="logo"><a href="#">MLOCHA SNEAKERS</a></div>
+        <nav>
+          <!-- <ul class="sidebar" id="sidebar">
+            <li onclick="hidesidebar()">
+              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed">
+                <path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/>
+              </svg>
+            </li>                  
+            <li><a href="#">Home</a></li>                  
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Sign Out</a></li>
+          </ul> -->
+          <ul class="ul">
+            <li><a href="#">Home</a></li>                  
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+        <div class="btn-container">
+          <button class="sign-in">Sign In</button>
+          <button class="sign-up">Sign Up</button>
+        </div>
+      </header>
+
+   <!-- <form id="add-form">
         <label for="name">Name: </label>
         <input type="text" id="name" name="name" requided>
-        <label for="image">Image: </label>
-        <input type="url" id="image" name="image" requided>
         <label for="price">Price: </label>
         <input type="number" id="price" name="price">
         <label for="size">Size: </label>
         <input type="number" id="size" name="size">
         <button>Get Sneaker</button>
-   </form>
-   <div id="sneakers-div">
-    <!-- add sneaker items here -->
-</div> 
+   </form> -->
+   <!-- <div id="sneakers-div"></div>  -->
+<main>
+    <div class="sneakers-div" id="sneakers-div">
+      <div class="sneakers" id="sneakers">
+        <!-- Dynamic cards will be inserted here -->
+      </div>
+      <div class="cart">
+        <h2>Your Cart <span id="cart-count">(0)</span></h2>
+        <div id="cart-items">
+          <!-- Cart items will appear here -->
+        </div>
+        <p id="cart-total">Total: $0.00</p> <!-- This will display the total price -->
+        <!-- <img src="./assets/images/birthday-cake-emoji3610.logowik.com.webp" alt="empty-cart"> -->
+        <p>Your added items will appear here</p>
+      </div>
+    </div>
+  </main>
+<script src="./index.js"></script>
 </body>
 </html>
